@@ -133,7 +133,8 @@ enum {
 	ALLOW_BENEFICIAL = 38,
 	DISABLE_MELEE = 39,
 	NPC_CHASE_DISTANCE = 40,
-	MAX_SPECIAL_ATTACK = 41
+	ALLOW_TO_TANK = 41,
+	MAX_SPECIAL_ATTACK = 42
 	
 };
 
