@@ -1,7 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 
-== 11/15/2014 ==
+== 11/16/2014 ==
+Kayen: Implemented NPC Special Ability 41 'Allow To Tank', gives NPC opportunity to take aggro over a client in melee range.
 Kayen: Updated swarm pet AI to be consistent with live.
 
 *OLD AI: Swarm pet would lock on to target until target died, then depop as soon as target died.
